--- a/index.html
+++ b/index.html
@@ -6,31 +6,43 @@
   <title>Model Viewer with AR</title>
   
   <script type="module" src="model-viewer.min.js"></script>
-  <style>
-    .slide {
-      background-color: transparent;
-      border: none;
-      cursor: pointer;
-      display: inline-block;
-      margin: 5px;
-    }
-    .selected {
-      border: 2px solid black;
-    }
-    #buttons {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    #ar-button {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  </style>
+ <style>
+  .slide {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: inline-block;
+    margin: 5px;
+  }
+  .selected {
+    border: 2px solid black;
+  }
+  #buttons {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  model-viewer {
+    width: 100%;
+    height: 500px;
+    background-color: #eee;
+    position: relative; /* Make it a positioning context */
+  }
+  #ar-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute; /* Absolute inside model-viewer */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center it perfectly */
+    z-index: 10; /* Ensure it’s above the model */
+  }
+</style>
+
 </head>
 <body>
 
